--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <p class="mt-4">
                             Una criptomoneda sostenida por y para la sociedad, <br/>en la que las <b>virtudes</b> de cada individuo son las que le dan <b>valor</b>.
                         </p>
+                        <p class="mt-4">
+                            * Un sistema <b>filantrópico</b> en el que sus protagonistas son <b>altruistas</b>.
+                        </p>
                         <div class="launch-text">Nos estamos viendo pronto ;) Gracias.</div>
                         <ul id="timer">
                             <li><span class="days">00</span><p class="days_text">Días</p></li>
@@ -133,28 +136,37 @@
                                     </div>
                                 </div>
                                 <div class="row d-md-flex mt-4 text-center">
-                                    <div class="col-sm-4 mt-2 wow fadeInLeft">
+                                    <div class="col-sm-3 mt-2 wow fadeInLeft">
                                         <div class="card border-none">
                                             <div class="card-body">
-                                                <!--<img src="assets/img/team-1.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>-->
+                                                <img src="assets/img/tomas-amendola.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
+                                                <h5 class="card-title pt-4">Tomás Lihuel Améndola</h5>
+                                                <p class="card-text text-muted">UX Developer</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-3 mt-2 wow fadeIn">
+                                        <div class="card border-none">
+                                            <div class="card-body">
+                                                <img src="assets/img/franco-soto.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
                                                 <h5 class="card-title pt-4">Franco Soto</h5>
                                                 <p class="card-text text-muted">Developer</p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-4 mt-2 wow fadeIn">
+                                    <div class="col-sm-3 mt-2 wow fadeIn">
                                         <div class="card border-none">
                                             <div class="card-body">
-                                                <!--<img src="assets/img/team-2.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>-->
+                                                <img src="assets/img/alejandro-scarone.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
                                                 <h5 class="card-title pt-4">Alejandro Scarone</h5>
                                                 <p class="card-text text-muted">Developer</p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-4 mt-2 wow fadeInRight">
+                                    <div class="col-sm-3 mt-2 wow fadeInRight">
                                         <div class="card border-none">
                                             <div class="card-body">
-                                                <!--<img src="assets/img/team-3.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>-->
+                                                <img src="assets/img/matias-amendola.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
                                                 <h5 class="card-title pt-4">Matias Nahuel Améndola</h5>
                                                 <p class="card-text text-muted">Developer</p>
                                             </div>
@@ -200,10 +212,9 @@
                 </div>
             </div>
         </section>
-
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script src="assets/js/countdown/jquery.countdown.min.js"></script>
         <script src="assets/js/scripts.js"></script>
     </body>
